--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.7.5"
+version = "3.0.0-RC3"
 maxColumn = 140
 align.preset = some
 align.tokens.add = [
@@ -32,3 +32,4 @@ danglingParentheses.exclude = [
 ]
 verticalMultiline.newlineAfterOpenParen = true
 verticalMultiline.atDefnSite = true
+runner.dialect = scala3
