--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -33,3 +33,5 @@ danglingParentheses.exclude = [
 verticalMultiline.newlineAfterOpenParen = true
 verticalMultiline.atDefnSite = true
 runner.dialect = scala3
+
+trailingCommas = multiple
